# irrigator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
docs/: IRRIGATION_PLAN.md
src/: flow.rs  main.rs  scheduler.rs  state.rs  telegram.rs  valve.rs
