[package]
name = "irrigator"
version = "0.1.0"
edition = "2021"
description = "Raspberry Pi garden irrigation controller with Telegram bot interface"
license = "MIT"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22"
